# FES

./: .env.example  .gitignore  .replit  .setup_cloudflare_full.sh.swp  20230101000000-create-users.js  API.md  AlertTrigger.js  AnalyticsDashboard.js  BiostasisControl.js  BiostasisDashboard.js  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dashboard.js  Dockerfile  Heatmap.js  HomeScreen.js  IncidentLogger.js  IncidentsScreen.js  IoTDashboard.js  LICENSE  Login.js  MonitorScreen.js  OutbreakDashboard.js  README.md  RealTimeMonitor.js  RiskProfileViz.tsx  SECURITY.md  SecurityRecommendationsPage.tsx  SurveillanceDashboard.js  ThreatIntelligencePage.tsx  User.js  UserProfile.js  WorkflowViz.tsx  anomaly_detection.py  app.js  app.py  auth.js  authController.js  authRoutes.js  automation_script.py  (+106 more)
.github/: PULL_REQUEST_TEMPLATE.md
AppDir/: AppRun  fes.desktop
architecture/: FES_architecture.adoc
attached_assets/: Pasted-Fluctuation-Enhanced-Sensing-FES-Project-Documentation-Focusing-on-Cyber-Warfare-Applications-1--1735648099206.txt  Pasted-Project-Design-for-Fluctuation-Enhanced-Sensing-FES-1-Objectives-Real-Time-Analysis-Analyze-sign-1735648082064.txt
automation/: orchestrate_with_notifications.py  project_automator.py  readme_automation.py
ci_cd/: ci-cd-pipeline.yml
components/: analysis.py  upload.py
config/: Dockerfile  config.yaml  docker-compose.yaml  example.proto  immudb_config.json  influxdb_config.json  monitoring-deployment.yaml  services_config.yml
core/: live_dashboard.py  notification_manager.py  offline_ai.py  plugin_loader.py  secure_alert.py  (+4 more)
(+117 files in other folders)
