[project]
name = "repl-nix-fluctuationanalyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=24.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pywavelets>=1.8.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "streamlit>=1.41.1",
]
