[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "training_simulation_system"
version = "1.0.0"
description = "Secure cross-platform training simulation system"
authors = [
    { name="ParaCryptid" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "pyyaml",
    "requests",
    "rich",
    "loguru"
]